fix(intro): 💄 remove center alignment

--- a/css/scss/_components.scss
+++ b/css/scss/_components.scss
@@ -28,7 +28,7 @@
     display: inline-block;
     background: $color-0;
     width: 100%;
-    height: px(1);
+    height: px(2);
     position: absolute;
     top: px(16);
     margin-left: $space-5;
